--- a/style.css
+++ b/style.css
@@ -1,8 +1,4 @@
-.header {
-  background-color: #F1F1F1;
-  text-align: center;
-  padding: 20px;
 }
 body {
-  background-color: grey;
+  background-image: url("Daniel R..jpg");
 }
