--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ h1{
   text-align: center;
 }
 
-h2{
-    /* Center all <h2></h2> tags */
+p1{
+    /* Center all <p1></p1> tags */
 	text-align: center;
 }
