--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@ body {
   background-color: gray;
   }
 image.resize {
-	width:540px;
-	height: auto;
+	width:270px;
+	height: 270px;
 }
 h1{
   /* Center all <h1></h1> tags */
