--- a/style.css
+++ b/style.css
@@ -2,8 +2,10 @@ body {
   background-color: gray;
   }
 image.resize {
-	width:270px;
-	height: 270px;
+	width:auto;
+	height:auto;
+	max-width: 90px
+	max-height: 90px
 }
 h1{
   /* Center all <h1></h1> tags */
