--- a/style.css
+++ b/style.css
@@ -2,10 +2,8 @@ body {
   background-color: gray;
   }
 image.resize {
-	width:auto;
-	height:auto;
-	max-width: 90px;
-	max-height: 90px;
+	width:90px;
+	height:90px;
 }
 h1{
   /* Center all <h1></h1> tags */
