--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@ body {
   background-color: gray;
   }
 image.resize {
-	width:90px;
-	height:90px;
+	width:50%;
+	height:50%;
 }
 h1{
   /* Center all <h1></h1> tags */
