--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
 body {
   background-color: gray;
   }
-image.resize {
-	width:10%;
-	height:10%;
+image {
+	width:100px;
+	height:100px;
+	object-fit: cover;
 }
 h1{
   /* Center all <h1></h1> tags */
